--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <img class="header__logo" src="img/logo.svg" alt="">
-    <div class="header__controls">
+    <div class="header__controls"></div>
         <a href="contacts">Контакты</a>
         <button>Заказать</button>
     </div>
@@ -31,6 +31,78 @@
   </div>
 </section>
 
+<!-- Форма -->
+<section class="form">
+  <div class="form__container">
+    <h1>Оставьте свои контакты</h1>
+    <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br> Гарантия возврата денег.</p>
+    <div>
+      <form action="">
+
+        <!-- form-name -->
+        <div class="form__group">
+          <label for="name">Ваше имя</label>
+          <input type="text" id="name" placeholder="Введите ваше имя">
+        </div>
+        <!-- form-email       -->
+        <div class="form__group">
+          <label for="email">Электронный адрес</label>
+          <input type="email" id="email" placeholder="***@yandex.ru">
+        </div>
+        <!-- form-tel -->
+        <div class="form__group">
+          <label for="phone">Ваш телефон</label>
+          <input type="tel" id="phone" placeholder="+7(999)999-99-99">
+        </div>
+        <!-- form-select -->
+        <div class="form__group">
+          <label for="budget">Примерный бюджет</label>
+          <select name="" id="budget">
+            <option value="10-30">10 000₽ - 30 000₽</option>
+            <option value="30-60">30 000₽ - 60 000₽</option>
+            <option value="60-100">60 000₽ - 100 000₽</option>
+            <option value="100+">100 000₽</option>
+          </select>
+        </div>
+
+        <button type="submit" class="form__submit">Отправить заявку</button>
+
+      </form>
+    </div>
+    </div>
+</section>
+
+<footer>
+  <div class="footer__container">
+    <!-- Позвонить нам -->
+    <div class="footer__group">
+      <h3>Позвонить нам:</h3>
+      <div class="footer__links">
+        <a href="tel:74959999999">+7 (495) 999-99-99</a>
+      </div>
+    </div>
+    <!-- Решения для дома -->
+    <div class="footer__group">
+      <h3>Решения для дома:</h3>
+      <div class="footer__links">
+        <a href="#">Солнечные панели GreenRobotic</a>
+        <a href="#">Системы солнечных панелей GreenStation</a>
+      </div>
+    </div>
+    <!-- Компания -->
+    <div class="footer__group">
+      <h3>Компания</h3>
+      <div class="footer__links">
+        <a href="#">Контакты</a>
+        <a href="#">Вакансии</a>
+        <a href="#">СМИ</a>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  <div class="footer__copyright">GreenCorp © 2023</div>
+</footer>
 
   </body>
     
